tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vpmovmskb_r32_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:269:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %6) #22
            ^
0.04user 0.01system 0:00.21elapsed 28%CPU (0avgtext+0avgdata 27496maxresident)k
0inputs+16outputs (0major+3286minor)pagefaults 0swaps
